[package]
publish = false
name = "evcxr-prelude"
version = "0.0.1"
edition = "2021"
description = "evcxr prelude"
authors = ["Julian Eager <eagr@tutanota.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/eagr/evcxr-prelude"
include = [
    "src/**/*",
    "README.md",
    "LICENSE-*",
]

[dependencies]
paste = "1"
serde_json = "1"
